<resources>
    <string name="app_name">CodingChallengeGrowFit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="discount_string">Discount Price</string>
    <string name="search_by_name">Search by Name</string>
    <string name="only_discounted_products">only Discounted Products</string>
    <string name="no_discount">N/A</string>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>
