
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ramon_sifer.codingchallengegrowfit.fragments.ItemDetail"
>
    <LinearLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ramon_sifer.codingchallengegrowfit.fragments.ItemDetail">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/image_detail_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/hello_blank_fragment" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="5">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <TextView
        android:text="@string/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/detail_text_size"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/name_view_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/detail_text_size"/>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:text="@string/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_text_size"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/price_view_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/detail_text_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:text="@string/discount_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/discount_view_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/detail_text_size"
                android:text="@string/no_discount"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:text="Size Available"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_text_size"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/size_view_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/detail_text_size"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>

    <TextView
        android:id="@+id/on_sale_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/headline_text_size"
        android:text="On Sale"
        android:visibility="gone"
        android:textColor="@color/colorAccent"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"/>
</RelativeLayout>